# Capabilities-Harness

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.claude/skills/cap-workflow/: SKILL.md
.github/workflows/: ci.yml
capability_harness/: __init__.py
capability_harness/application/: graph.py  memory.py  policy.py  registry.py  repository_service.py  routing.py  scheduler.py  validation.py
capability_harness/cli/: app.py  output.py
capability_harness/cli/commands/: artifact.py  benchmark.py  capability.py  config.py  mcp.py  model.py  review.py  task.py
capability_harness/config/: defaults.py  loader.py  schema.py
capability_harness/domain/: artifact.py  capability.py  events.py  task.py
capability_harness/infrastructure/eventbus/: bus.py
capability_harness/infrastructure/git/: diff.py  merge.py  repository.py  worktree.py
capability_harness/infrastructure/persistence/: artifact_store.py  state_store.py
capability_harness/infrastructure/providers/: __init__.py  anthropic_provider.py  noop_provider.py  ollama_provider.py  protocol.py  registry.py
capability_harness/infrastructure/runtime/: cloud_runtime.py  local_runtime.py  model_manager.py  provider_registry.py  runtime.py
capability_harness/mcp/: __init__.py  server.py
docs/adr/: 0001-capability-first.md  0002-artifact-first.md  0003-policy-engine.md  0004-routing-engine.md  0005-runtime-layer.md
examples/: harness.toml
tests/: conftest.py
tests/unit/: test_graph.py  test_registry.py  test_task_state.py
(+7 files in other folders)
